tests/ui/coverage-attr/subword.stderr
error: malformed `coverage` attribute input
  --> $DIR/subword.rs:8:1
   |
LL | #[coverage(yes(milord))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[coverage(yes(milord))]
LL + #[coverage(off)]
   |
LL - #[coverage(yes(milord))]
LL + #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/subword.rs:11:1
   |
LL | #[coverage(no(milord))]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[coverage(no(milord))]
LL + #[coverage(off)]
   |
LL - #[coverage(no(milord))]
LL + #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/subword.rs:14:1
   |
LL | #[coverage(yes = "milord")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[coverage(yes = "milord")]
LL + #[coverage(off)]
   |
LL - #[coverage(yes = "milord")]
LL + #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/subword.rs:17:1
   |
LL | #[coverage(no = "milord")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[coverage(no = "milord")]
LL + #[coverage(off)]
   |
LL - #[coverage(no = "milord")]
LL + #[coverage(on)]
   |

error: aborting due to 4 previous errors

